--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -1,148 +1,84 @@
      <footer class="footer-section">
-      <div class="container">
-        <div class="row">
-          <div class="footer-cta pt-5 pb-5">
-            <div class="row">
-                  <div class="col-xl-4 col-md-4 mb-30">
-                      <div class="single-cta">
-                          <i class="fas fa-map-marker-alt"></i>
-                          <div class="cta-text">
-                              <h4>Find us</h4>
-                              <span>Cairo,Egypt</span>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-xl-4 col-md-4 mb-30">
-                      <div class="single-cta">
-                          <i class="fas fa-phone"></i>
-                          <div class="cta-text">
-                              <h4>Call us</h4>
-                              <span>012345689</span>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-xl-4 col-md-4 mb-30">
-                      <div class="single-cta">
-                          <i class="far fa-envelope-open"></i>
-                          <div class="cta-text">
-                              <h4>Mail us</h4>
-                              <span>mail@info.com</span>
-                          </div>
-                      </div>
-                  </div>
-            </div>
-          </div>
-          <div class="footer-content pt-5 pb-5">
-            <div class="row">
-                  <div class="col-xl-4 col-lg-4 mb-50">
-                      <div class="footer-widget">
-                          <div class="footer-logo">
-                              <a href="index.html">
-                                <img class="image--circle" src="/assets/img/reslogo.jpg" alt="logo">
-                              </a>
-                              <div class="footer-social-icon pt-3 ps-5">
-                                <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
-                                <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
-                                <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
-                            </div>
-                          </div>
-                      
-                      </div>
-                  </div>
-                  <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
-                      <div class="footer-widget">
-                          <div class="footer-widget-heading">
-                              <h3>Useful Links</h3>
-                          </div>
-                          <ul>
-                              <li><a href="#">Home</a></li>
-                              <li><a href="#">about</a></li>
-                              <li><a href="#">services</a></li>
-                              <li><a href="#">portfolio</a></li>
-                              <li><a href="#">Contact</a></li>
-                              <li><a href="#">About us</a></li>
-                              <li><a href="#">Our Services</a></li>
-                              <li><a href="#">Expert Team</a></li>
-                              <li><a href="#">Contact us</a></li>
-                              <li><a href="#">Latest News</a></li>
-                          </ul>
-                      </div>
-                  </div>
-                  <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
-                      <div class="footer-widget">
-                          <div class="footer-widget-heading">
-                              <h3>working hours</h3>
-                          </div>
-                          <div class="subscribe-form">
-                            <table border="2" class="table">
-                                <tr>
-                                  <th>Day</th>
-                                  <th>From</th>
-                                  <th>To</th>
-                                </tr>
-                                <tr>
-                                  <td>Saturday</td>
-                                  <td>12:00 am</td>
-                                  <td>10:00 pm</td>
-                                </tr>
-                                <tr>
-                                  <td>Sunday</td>
-                                  <td>12:00 am</td>
-                                  <td>10:00 pm</td>
-                                </tr>
-                                <tr>
-                                  <td>Monday</td>
-                                  <td>12:00 am</td>
-                                  <td>10:00 pm</td>
-                                </tr>
-                                <tr>
-                                  <td>Thursday</td>
-                                  <td>12:00 am</td>
-                                  <td>10:00 pm</td>
-                                </tr>
-                                <tr>
-                                  <td>Wednesday</td>
-                                  <td>12:00 am</td>
-                                  <td>10:00 pm</td>
-                                </tr>
-                                <tr>
-                                  <td>Tuesday</td>
-                                  <td>12:00 am</td>
-                                  <td>12:00 pm</td>
-                                </tr>
-                                <tr>
-                                  <td>Friday</td>
-                                  <td>12:00 am</td>
-                                  <td>12:00 pm</td>
-                                </tr>
-                              </table>
-                          </div>
-                      </div>
-                  </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="copyright-area">
-          <div class="container">
-              <div class="row col-xl-12">
-                  <div class="col-xl-6 col-lg-6 text-center text-lg-left">
-                      <div class="copyright-text">
-                          <p>Copyright &copy; 2022, All Right Reserved <a href="#">ITI student</a></p>
-                      </div>
-                  </div>
-                  <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
-                      <div class="footer-menu">
-                          <ul>
-                              <li><a href="#">Home</a></li>
-                              <li><a href="#">Terms</a></li>
-                              <li><a href="#">Privacy</a></li>
-                              <li><a href="#">Policy</a></li>
-                              <li><a href="#">Contact</a></li>
-                          </ul>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </footer>
+       <div class="container">
+         <div class="row">
+           <div class="footer-cta pt-5 pb-5">
+             <div class="row">
+               <div class="col-xl-4 col-md-4 ">
+                 <div class="single-cta">
+                   <i class="fas fa-map-marker-alt"></i>
+                   <div class="cta-text">
+                     <h4>Location</h4>
+                     <span>Cairo,Egypt</span>
+                   </div>
+                 </div>
+               </div>
+               <div class="col-xl-4 col-md-4 ">
+                 <div class="single-cta">
+                   <div class="cta-text">
+                     <a href="tel:+20123456789"><i class="fas fa-phone-alt"><span
+                           class="ms-3">+20123456789</span></i></a>
+                   </div>
+                 </div>
+               </div>
+               <div class="col-xl-4 col-md-4 ">
+                 <div class="single-cta">
+                   <i class="far fa-envelope-open"></i>
+                   <div class="cta-text">
+                     <a href="mailto: abc@example.com"> <span> pick_click@info.com</span></a>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div class="footer-content pt-5 pb-5">
+             <div class="row">
+               <div class="col-xl-4 col-lg-4">
+                 <div class="footer-widget">
+                   <div class="footer-logo">
+                     <a [routerLink]="['/home']">
+                       <img class="image--circle" src="/assets/img/reslogo.jpg" alt="logo">
+                     </a>
+                   </div>
+                 </div>
+                 <div class="footer-social-icon ">
+                   <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
+                   <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
+                   <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
+                 </div>
+
+               </div>
+               <div class="col-xl-4 col-lg-4 col-md-6">
+                 <div class="footer-widget">
+                   <div class="footer-widget-heading">
+                     <h3>Important Links</h3>
+                   </div>
+                   <ul>
+                     <li><a [routerLink]="['/home']">Home</a></li>
+                     <li><a [routerLink]="['/about']">about</a></li>
+                     <li><a [routerLink]="['/product/listing']">Menu</a></li>
+                     <li><a [routerLink]="['/contact-us']">Contact Us</a></li>
+                     <li></li>
+
+                   </ul>
+                 </div>
+               </div>
+               <div class="col-xl-4 col-lg-4 col-md-6">
+                 <div class="footer-widget">
+                   <div class="footer-widget-heading">
+                     <h3>working hours</h3>
+                   </div>
+                   <div class="ff">
+                     <i class="far fa-clock"><span class="ms-3">Sat - thu: 9:00 AM - 2:00 PM</span></i>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
+       <div class="copyright-area text-center">
+         <div class="copyright-text">
+           <p>Copyright &copy; 2022, All Right Reserved <a href="#">ITI student</a></p>
+         </div>
+       </div>
+     </footer>
