--- a/src/assets/sass/base/_reset.scss
+++ b/src/assets/sass/base/_reset.scss
@@ -21,7 +21,10 @@ body
     font-size: 1.26rem;
     font-family: "Open Sans", Arial, sans-serif;
     box-sizing: border-box;
+
+    font-family: "Poppins", sans-serif;
+    color: #444444;
     
     //to be removed
-    height: 1200px;;
+    // height: 1200px;;
 }
