--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -2,7 +2,7 @@
     color: white !important;
 }
 .navbar li :hover{
-color: #ff5e14 !important;
+color: #ffb03b !important;
 }
 .log{
     font-size: 15px;
@@ -14,3 +14,33 @@ color: #ff5e14 !important;
 .modal{
   background: rgba(0,0,0, .5);
 }
+.navbar {
+  padding: 0;
+  font-size: 15px;
+  height: 50px;
+  background: rgba(26, 24, 22, 0.8);
+}
+
+.ii {
+  color: #ffb03b;
+  line-height: 0;
+}
+.navbar i span {
+  color: #fff;
+  font-style: normal;
+  padding-left: 5px;
+}
+
+.navbar i:hover{
+  color: #ffb03b !important;
+  }
+  .navbar a:focus {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 15px;
+    font-weight: 500;
+    color: #ffb03b !important;
+    white-space: nowrap;
+    transition: 0.3s;
+  }
