--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -14,9 +14,10 @@
                </div>
                <div class="col-xl-4 col-md-4 ">
                  <div class="single-cta">
+                   <i class="fas fa-phone-alt"></i>
                    <div class="cta-text">
-                     <a href="tel:+20123456789"><i class="fas fa-phone-alt"><span
-                           class="ms-3">+20123456789</span></i></a>
+                     <h4>Call Us</h4>
+                     <a href="tel:+20123456789"><span>+20123456789</span></a>
                    </div>
                  </div>
                </div>
@@ -24,6 +25,7 @@
                  <div class="single-cta">
                    <i class="far fa-envelope-open"></i>
                    <div class="cta-text">
+                     <h4>Email</h4>
                      <a href="mailto: abc@example.com"> <span> pick_click@info.com</span></a>
                    </div>
                  </div>
@@ -68,7 +70,7 @@
                      <h3>working hours</h3>
                    </div>
                    <div class="ff">
-                     <i class="far fa-clock"><span class="ms-3">Sat - thu: 9:00 AM - 2:00 PM</span></i>
+                     <i class="far fa-clock"><span class="ms-3">Sat - Fri: 9:00 AM - 2:00 PM</span></i>
                    </div>
                  </div>
                </div>
