--- a/src/app/core/product-feature/product-listing/product-listing.component.scss
+++ b/src/app/core/product-feature/product-listing/product-listing.component.scss
@@ -1,3 +1,19 @@
-.search{
-    width: 15%;
+h2 {
+  color: #ffb03b;
+  font-family: "Lucida Handwriting" !important;
+  font-size: 30px;
+}
+
+.search {
+  width: 15%;
+}
+
+.menu-bg {
+  margin: 0;
+  padding: 1%;
+  overflow: hidden;
+  background: rgba(0, 0, 0, 0.7);
+  background-image: url("../../../../assets/img/mbg1.png");
+  background-size: cover;
+  background-blend-mode: multiply;
 }
