--- a/src/assets/sass/components/_item-medium-1.scss
+++ b/src/assets/sass/components/_item-medium-1.scss
@@ -38,10 +38,10 @@
         top: -5rem;
         opacity: 0;
         width:100%;
-        background-color: #ff5e14;
-        font-size:1rem;
+        background-color: #ffb03b;
+        font-size:1.5rem;
+        cursor: pointer;
         color:$white;
-        text-transform: uppercase;
         display: flex;
         align-items: center;
         justify-content: center;
