edit login,register,forgot&reset pass

--- a/src/app/admin/forgot-password/forgot-password.component.html
+++ b/src/app/admin/forgot-password/forgot-password.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<section>
+  <div class="container">
     <div class="row col-md-12 mb-5">
       <div class="col-lg-3 col-md-2"></div>
       <div class="col-lg-6 col-md-8 login-box">
@@ -18,15 +19,17 @@
                 <label class="form-control-label w-50 mx-auto"><span class="fas fa-envelope"></span> Email</label>
                 <input type="text" class="form-control w-50 mx-auto" name="email" ngModel>
                 <p class="text-danger text-center fs-5" *ngIf="error.email">{{error.email}}</p>
-  
+
               </div>
-  
-              <button type="submit" class="btn login" [disabled] = "wait">Request new password</button><br><br>
+
+              <button type="submit" class="btn login" [disabled]="wait">Request new password</button><br><br>
             </form>
           </div>
         </div>
-    
-        <h4 class="text-center text-white mb-5"><a routerLink="/login" class="links mx-2">Login</a> OR <a routerLink="/register" class="links mx-2">Register</a></h4>
+
+        <h4 class="text-center text-white mb-5"><a routerLink="/login" class="links mx-2">Login</a> OR <a
+            routerLink="/register" class="links mx-2">Register</a></h4>
+      </div>
     </div>
-    </div>
-</div>
+  </div>
+</section>
