--- a/src/app/admin/login/login.component.html
+++ b/src/app/admin/login/login.component.html
@@ -1,47 +1,42 @@
-<div class="container">
-  <div class="row col-md-12 mb-5">
-    <div class="col-lg-3 col-md-2"></div>
-    <div class="col-lg-6 col-md-8 login-box">
-      <div class="col-lg-12 login-key mt-5">
-        <i class="fas fa-laugh"></i>
-      </div>
-      <div class="col-lg-12 login-title">
-        Welcome Back
-      </div>
-
-      <div class="col-lg-12 login-form fs-4">
-        <div class="col-lg-12 login-form">
-          <form (ngSubmit)="onSubmit(loginForm)" #loginForm="ngForm">
-            <div class="form-group">
-              <label class="form-control-label w-50 mx-auto"><span class="fas fa-envelope"></span> Email</label>
-              <input type="text" class="form-control w-50 mx-auto" name= "email" ngModel>
-              <p class="text-danger text-center fs-5" *ngIf="errors.email">{{errors.email}}</p>
-            </div>
-            <div class="form-group">
-              <label class="form-control-label w-50 mx-auto"><span class="fas fa-lock"></span> Password</label>
-              <input type="password" class="form-control w-50 mx-auto"  name= "password" ngModel>
-              <p class="text-danger text-center fs-5" *ngIf="errors.password">{{errors.password}}</p>
-            </div>
-
-            <button type="submit" class="btn login">LOGIN</button><br><br>
-            <h5 class="text-white text-center">- or -</h5>
-          </form>
+<section>
+  <div class="container">
+    <div class="row col-md-12 mb-5">
+      <div class="col-lg-3 col-md-2"></div>
+      <div class="col-lg-6 col-md-8 login-box">
+        <div class="col-lg-12 login-key mt-5">
+          <i class="fas fa-laugh"></i>
         </div>
-      </div>
-<!-- 
-      <a href="#" class="btn my-5 mx-2">
-        <i class="fab fa-facebook mx-2"></i> Sign in using Facebook
-      </a>
-      <a href="#" class="btn">
-        <i class="fab fa-google-plus mx-2"></i> Sign in using Google+
-      </a> -->
-      
-      <br>
+        <div class="col-lg-12 login-title">
+          Welcome Back
+        </div>
 
-      <p class="">
-        <a routerLink="/forgot-password" class="text-center mb-2 my-4 links">I forgot my password</a>
-      </p>
+        <div class="col-lg-12 login-form fs-4">
+          <div class="col-lg-12 login-form">
+            <form (ngSubmit)="onSubmit(loginForm)" #loginForm="ngForm">
+              <div class="form-group">
+                <label class="form-control-label w-50 mx-auto "><span class="fas fa-envelope"></span> Email</label>
+                <input type="text" class="form-control w-50 mx-auto" name="email" ngModel>
+                <p class="text-danger text-center fs-5" *ngIf="errors.email">{{errors.email}}</p>
+              </div>
+              <div class="form-group">
+                <label class="form-control-label w-50 mx-auto"><span class="fas fa-lock"></span> Password</label>
+                <input type="password" class="form-control w-50 mx-auto" name="password" ngModel>
+                <p class="text-danger text-center fs-5" *ngIf="errors.password">{{errors.password}}</p>
+              </div>
+
+              <button type="submit" class="btn login">LOGIN</button><br><br>
+              <h5 class="text-white text-center">- or -</h5>
+            </form>
+          </div>
+        </div>
+        <br>
+
+        <p class="">
+          <a routerLink="/forgot-password" class="text-center mb-2 my-4 links">I forgot my password</a>
+        </p>
         <h4 class="text-white mb-5">Not a member? <a routerLink="/register" class="text-center links">Register</a>
-        </h4>  
+        </h4>
+      </div>
     </div>
   </div>
+</section>
