--- a/src/app/admin/login/login.component.scss
+++ b/src/app/admin/login/login.component.scss
@@ -1,142 +1,107 @@
+section {
+  background-image: url("../../../assets/img/lgbg1.jpg");
+  background-size: cover;
+}
 
 .login-box {
-    margin-top: 75px;
-    height: auto;
-    background: #1A2226;
-    text-align: center;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  margin-top: 75px;
+  height: auto;
+  background: #c0bfbd62;
+  text-align: center;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .login-key {
-    height: 100px;
-    font-size: 80px;
-    line-height: 100px;
-    background: -webkit-linear-gradient(#27EF9F, #ff5e14);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  height: 100px;
+  font-size: 80px;
+  line-height: 100px;
+  background: -webkit-linear-gradient(white, #ffb03b);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .login-title {
-    margin-top: 15px;
-    text-align: center;
-    font-size: 30px;
-    letter-spacing: 2px;
-    margin-top: 15px;
-    font-weight: bold;
-    color: #ECF0F5;
+  margin-top: 25px;
+  text-align: center;
+  font-weight: bold;
+  color: #ffb03b;
+  font-family: "Lucida Handwriting";
+  font-size: 20px;
 }
 
 .login-form {
-    margin-top: 25px;
-    text-align: left;
+  margin-top: 25px;
+  text-align: left;
 }
 
 input[type=text] {
-    background-color: #1A2226;
-    border: none;
-    border-bottom: 2px solid #ff5e14;
-    border-top: 0px;
-    border-radius: 0px;
-    font-weight: bold;
-    outline: 0;
-    margin-bottom: 20px;
-    padding-left: 0px;
-    color: #ECF0F5;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid #ffb03b;
+  font-weight: bold;
+  outline: 0;
+  margin-bottom: 20px;
+  color: black;
+  font-size: 15px;
 }
 
 input[type=password] {
-    background-color: #1A2226;
-    border: none;
-    border-bottom: 2px solid #ff5e14;
-    border-top: 0px;
-    border-radius: 0px;
-    font-weight: bold;
-    outline: 0;
-    padding-left: 0px;
-    margin-bottom: 20px;
-    color: #ECF0F5;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid #ffb03b;
+  font-weight: bold;
+  outline: 0;
+  margin-bottom: 15px;
+  font-size: 15px;
 }
 
 .form-group {
-    margin-bottom: 40px;
-    outline: 0px;
+  margin-bottom: 40px;
+  outline: 0px;
 }
 
 .form-control:focus {
-    border-color: inherit;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border-bottom: 2px solid #0DB8DE;
-    outline: 0;
-    background-color: #1A2226;
-    color: #ECF0F5;
-}
-
-input:focus {
-    outline: none;
-    box-shadow: 0 0 0;
-    font-size: 15px !important;
-    font-family: Arial, Helvetica, sans-serif;
-
-
+  border-color: inherit;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  outline: 0;
+  background-color: white;
+  color: black;
 }
 
 label {
-    margin-bottom: 0px;
-    font-size: 15px !important;
-    font-family: Arial, Helvetica, sans-serif;
-
+  margin-bottom: 0px;
+  font-size: 15px !important;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 
 .form-control-label {
-    font-size: 10px;
-    color: #6C6C6C;
-    font-weight: bold;
-    letter-spacing: 1px;
-}
-
-.login-text {
-    text-align: left;
-    padding-left: 0px;
-    color: #A2A4A4;
+  font-size: 10px;
+  color: rgb(58, 56, 56);
+  font-weight: bold;
+  letter-spacing: 1px;
 }
 
 .btn {
-  align-items: center;
-  background-clip: padding-box;
-  background-color: #fa6400;
-  border: 1px solid transparent;
-  border-radius: .50rem;
-  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-flex;
-  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 16px;
   font-weight: 600;
-  justify-content: center;
-  line-height: 1.25;
-  margin: 0;
-  min-height: 3rem;
-  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
-  position: relative;
-  text-decoration: none;
-  transition: all 250ms;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  vertical-align: baseline;
+  font-size: 13px;
+  letter-spacing: 1px;
+  padding: 12px 30px;
+  border-radius: 50px;
+  line-height: 1;
+  margin: 0 10px;
+  background: #ffb03b;
+  color: #fff;
   width: auto;
 }
-.login{
-    margin-left: 40%;
+
+.login {
+  margin-left: 40%;
 }
 
 .btn:hover,
 .btn:focus {
-  background-color: #fb8332;
   box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
 }
 
@@ -144,12 +109,9 @@ label {
   transform: translateY(-1px);
 }
 
-.btn:active {
-  background-color: #c85000;
-  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
-  transform: translateY(0);
-}
-.links{
-    font-size: 15px;
-    cursor: pointer;
+.links {
+  font-size: 18px;
+  cursor: pointer;
+  color: rgb(58, 56, 56);
+  font-weight: bold;
 }
