--- a/src/app/admin/register/register.component.scss
+++ b/src/app/admin/register/register.component.scss
@@ -1,8 +1,11 @@
-
+section{
+    background-image: url("../../../assets/img/lgbg1.jpg");
+    background-size: cover;
+}
 .login-box {
     margin-top: 75px;
     height: auto;
-    background: #1A2226;
+    background: #c0bfbd62;
     text-align: center;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
@@ -11,7 +14,7 @@
     height: 100px;
     font-size: 80px;
     line-height: 100px;
-    background: -webkit-linear-gradient(#27EF9F, #ff5e14);
+    background: -webkit-linear-gradient(white, #ffb03b);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -19,12 +22,13 @@
 .login-title {
     margin-top: 15px;
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
     letter-spacing: 2px;
     margin-top: 15px;
     font-weight: bold;
-    color: #ECF0F5;
-}
+    color: #ffb03b;
+    font-family: "Lucida Handwriting";
+  }
 
 .login-form {
     margin-top: 25px;
@@ -32,29 +36,24 @@
 }
 
 input[type=text] {
-    background-color: #1A2226;
+    background-color: transparent;
     border: none;
-    border-bottom: 2px solid #ff5e14;
-    border-top: 0px;
-    border-radius: 0px;
+    border-bottom: 2px solid #ffb03b;
     font-weight: bold;
     outline: 0;
     margin-bottom: 20px;
-    padding-left: 0px;
-    color: #ECF0F5;
-}
+    color: black;
+    font-size: 15px;
+  }
 
 input[type=password] {
-    background-color: #1A2226;
+    background-color: transparent;
     border: none;
-    border-bottom: 2px solid #ff5e14;
-    border-top: 0px;
-    border-radius: 0px;
+    border-bottom: 2px solid #ffb03b;
     font-weight: bold;
     outline: 0;
-    padding-left: 0px;
     margin-bottom: 20px;
-    color: #ECF0F5;
+    font-size: 15px;
 }
 
 .form-group {
@@ -66,19 +65,9 @@ input[type=password] {
     border-color: inherit;
     -webkit-box-shadow: none;
     box-shadow: none;
-    border-bottom: 2px solid #0DB8DE;
     outline: 0;
-    background-color: #1A2226;
-    color: #ECF0F5;
-}
-
-input:focus {
-    outline: none;
-    box-shadow: 0 0 0;
-    font-size: 15px !important;
-    font-family: Arial, Helvetica, sans-serif;
-
-
+    background-color: white;
+    color: black;
 }
 
 label {
@@ -91,7 +80,7 @@ label {
 
 .form-control-label {
     font-size: 10px;
-    color: #6C6C6C;
+    color: rgb(58, 56, 56);
     font-weight: bold;
     letter-spacing: 1px;
 }
@@ -103,40 +92,23 @@ label {
 }
 
 .btn {
-  align-items: center;
-  background-clip: padding-box;
-  background-color: #fa6400;
-  border: 1px solid transparent;
-  border-radius: .50rem;
-  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-flex;
-  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  justify-content: center;
-  line-height: 1.25;
-  margin: 0;
-  min-height: 3rem;
-  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
-  position: relative;
-  text-decoration: none;
-  transition: all 250ms;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  vertical-align: baseline;
-  width: auto;
-}
+    font-weight: 600;
+    font-size: 13px;
+    letter-spacing: 1px;
+    padding: 12px 30px;
+    border-radius: 50px;
+    line-height: 1;
+    margin: 0 10px;
+    background: #ffb03b;
+    color: #fff;
+    width: auto;
+  }
 .login{
     margin-left: 40%;
 }
 
 .btn:hover,
 .btn:focus {
-  background-color: #fb8332;
   box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
 }
 
@@ -144,11 +116,9 @@ label {
   transform: translateY(-1px);
 }
 
-.btn:active {
-  background-color: #c85000;
-  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
-  transform: translateY(0);
-}
 .links{
+    font-size: 18px;
     cursor: pointer;
+    color: rgb(58, 56, 56);
+    font-weight: bold;
 }
