--- a/src/app/admin/reset-password/reset-password.component.html
+++ b/src/app/admin/reset-password/reset-password.component.html
@@ -1,11 +1,12 @@
-<div class="container">
+<section>
+  <div class="container">
     <div class="row col-md-12 mb-5">
       <div class="col-lg-3 col-md-2"></div>
       <div class="col-lg-6 col-md-8 login-box">
         <div class="col-lg-12 login-title">
           Get your password
         </div>
-  
+
         <span class="alert alert-danger" role="alert" *ngIf="message">
           {{message}}
           <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -14,22 +15,23 @@
         <div class="col-lg-12 login-form">
           <div class="col-lg-12 login-form">
             <form (ngSubmit)="onSubmit(resetForm)" #resetForm="ngForm">
-                <div class="form-group">
-                    <label class="form-control-label w-50 mx-auto"><span class="fas fa-lock"></span> Password</label>
-                    <input type="password" class="form-control w-50 mx-auto" name="password" ngModel>
-                    <p class="text-danger text-center fs-5" *ngIf="error.password">{{error.password}}</p>
-                  </div>
-                  <div class="form-group">
-                    <label class="form-control-label w-50 mx-auto"><span class="fas fa-lock"></span>Confirm Password</label>
-                    <input type="password" class="form-control w-50 mx-auto" name="password_confirm" ngModel>
-                  </div>
-              
+              <div class="form-group">
+                <label class="form-control-label w-50 mx-auto"><span class="fas fa-lock"></span> Password</label>
+                <input type="password" class="form-control w-50 mx-auto" name="password" ngModel>
+                <p class="text-danger text-center fs-5" *ngIf="error.password">{{error.password}}</p>
+              </div>
+              <div class="form-group">
+                <label class="form-control-label w-50 mx-auto"><span class="fas fa-lock"></span>Confirm Password</label>
+                <input type="password" class="form-control w-50 mx-auto" name="password_confirm" ngModel>
+              </div>
+
               <button type="submit" class="btn login">Submit</button><br><br>
             </form>
           </div>
         </div>
-    
+
         <h4 class="mb-5"><a routerLink="/login" class="links">Login</a></h4>
+      </div>
     </div>
-    </div>
-  
+  </div>
+</section>
