--- a/src/app/admin/dashboard/order/order.component.html
+++ b/src/app/admin/dashboard/order/order.component.html
@@ -4,11 +4,11 @@
             <div class="col-lg-10 offset-lg-1">
               <div class="cart_title">View Orders</div>
               <div class="cart_container d-flex justify-content-between">
-            <div class="col-lg-4 ">
+            <div class="col-lg-5  ">
 
                     <div class="cart_items"  *ngFor="let item of food"  >
                         <ul class="cart_list">
-                            <li class="cart_item clearfix">
+                            <li class="cart_item  d-flex justify-content-start clearfix ">
                                 <div class="cart_item_image"><img src={{item.imagepath}} alt="food image"></div>
                                 <div class="cart_item_info d-flex flex-md-row flex-column justify-content-between">
                                     <div class="cart_item_name cart_info_col">
@@ -43,12 +43,12 @@
                     </div>
 
 </div>
-<div class="col-lg-8 ">
+<div class="col-lg-7">
 
                     <div class="cart_items"  *ngFor="let ordr of order"  >
                       <ul class="cart_list">
-                          <li class="cart_item clearfix">
-                              <div class="cart_item_info d-flex flex-md-row flex-column justify-content-between">
+                          <li class="cart_item  d-flex justify-content-end clearfix">
+                              <div class="cart_item_info d-flex flex-md-row flex-column justify-content-between ">
                                   <div class="cart_item_name cart_info_col">
                                       <div class="cart_item_title">Created at</div>
                                       <div class="cart_item_text">{{ordr.created_at}}</div>
